# OpenCV_Taller_Background

./: CMakeLists.txt
src/: main.cpp
